--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -38,11 +38,112 @@
   .news-container {
     width: 120rem;
   }
+
+  .news-content-img-box {
+    width: 37rem;
+  }
 }
 
 /* media query from 1200 */
 @media (max-width: 76em) {
   .news-container {
     width: 105rem;
+  }
+  .news-content-img-box {
+    width: 32rem;
+  }
+}
+
+/* media query from 1025 */
+@media (max-width: 64em) {
+  .news-container {
+    grid-template-columns: repeat(2, 1fr) !important;
+    width: 95rem;
+  }
+  .news-content-img-box {
+    width: 44rem;
+  }
+}
+
+/* media query from 930 */
+@media (max-width: 58em) {
+  .news-container {
+    grid-template-columns: repeat(1, 1fr) !important;
+    width: 89rem;
+  }
+  .news-content-img-box {
+    width: 43rem;
+  }
+  .news-content-text-box {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* media query from 870 */
+@media (max-width: 54.4em) {
+  .news-container {
+    width: 80rem;
+  }
+  .news-content-img-box {
+    width: 36rem;
+  }
+}
+
+/* media query from 780 */
+@media (max-width: 48.8em) {
+  .news-container {
+    width: 70rem;
+  }
+  .news-content-img-box {
+    width: 30rem;
+  }
+}
+
+/* media query from 680 */
+@media (max-width: 43em) {
+  .news-container {
+    width: 65rem;
+  }
+  .news-content-img-box {
+    width: 25rem;
+  }
+}
+
+/* media query from 540 */
+@media (max-width: 33.8em) {
+  .news-container {
+    width: 51rem;
+  }
+  .news-content-img-box {
+    width: 45rem;
+  }
+  .news-content-text-box {
+    width: 100%;
+    height: 21rem;
+  }
+}
+
+/* media query from 490 */
+@media (max-width: 31em) {
+  .news-container {
+    width: 41rem;
+  }
+  .news-content-img-box {
+    width: 35rem;
+  }
+  .news-content-text-box {
+    width: 100%;
+    height: 21rem;
+  }
+}
+
+/* media query from 380 */
+@media (max-width: 24.4em) {
+  .news-container {
+    width: 37rem;
+  }
+  .news-content-img-box {
+    width: 31rem;
   }
 }
