--- a/src/components/mostRead.module.css
+++ b/src/components/mostRead.module.css
@@ -60,3 +60,59 @@
   word-spacing: 0.3rem;
   text-decoration: none;
 }
+
+/* media query from 930 */
+@media (max-width: 58em) {
+  .mostRead-list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .mostRead-item:nth-child(odd)::after {
+    content: "";
+    height: 0rem;
+    border-right: none;
+    margin: 0rem 0rem;
+  }
+}
+
+/* media query from 870 */
+/* @media (max-width: 54.4em) {
+  .footer-container {
+    width: 80rem;
+  }
+} */
+
+/* media query from 780 */
+/* @media (max-width: 48.8em) {
+  .footer-container {
+    width: 70rem;
+  }
+} */
+
+/* media query from 680 */
+@media (max-width: 43em) {
+  .mostRead-container {
+    padding: 4.8rem 10.2rem;
+  }
+}
+
+/* media query from 540 */
+@media (max-width: 33.8em) {
+  .mostRead-container {
+    padding: 4.8rem 5.2rem;
+  }
+}
+
+/* media query from 490 */
+/* @media (max-width: 31em) {
+  .footer-container {
+    width: 41rem;
+  }
+} */
+
+/* media query from 380 */
+@media (max-width: 24.4em) {
+  .mostRead-container {
+    padding: 4.8rem 2.2rem;
+  }
+}
