--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,41 @@ body {
   left: 88rem;
   cursor: pointer;
 }
+
+@media (max-width: 58em) {
+  .content {
+    display: flex;
+  }
+}
+
+/* media query from 540 */
+@media (max-width: 33.8em) {
+  .content {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 31em) {
+  .heading-primary {
+    font-size: 2.5rem;
+  }
+
+  .heading-secondary {
+    font-size: 2rem;
+  }
+
+  .paragraph-primary {
+    font-size: 1.2rem;
+  }
+}
+
+/* media query from 380 */
+@media (max-width: 24.4em) {
+  .heading-secondary {
+    font-size: 1.7rem;
+  }
+
+  .paragraph-primary {
+    font-size: 1.1rem;
+  }
+}
