--- a/src/components/forum/forumcontent.module.css
+++ b/src/components/forum/forumcontent.module.css
@@ -119,3 +119,87 @@
   font-size: 1.8rem;
   color: #7f858d;
 }
+
+/* media query from 1270 */
+@media (max-width: 79em) {
+  .section-forum {
+    width: 120rem;
+  }
+}
+
+/* media query from 1200 */
+@media (max-width: 75em) {
+  .section-forum {
+    width: 105rem;
+  }
+}
+
+/* media query from 1145 */
+@media (max-width: 71.6em) {
+  .section-forum {
+    width: 95rem;
+  }
+}
+
+/* media query from 995 */
+@media (max-width: 62.2em) {
+  .section-forum {
+    width: 85rem;
+    grid-template-columns: 1fr;
+  }
+
+  .forum-social-links {
+    display: none;
+  }
+
+  .forum-container {
+    /* max-height: 102vh; */
+    height: 100%;
+  }
+}
+
+/* media query from 890 */
+@media (max-width: 55.7em) {
+  .section-forum {
+    width: 74rem;
+  }
+}
+
+/* media query from 780 */
+@media (max-width: 48.8em) {
+  .section-forum {
+    width: 64rem;
+  }
+
+  .forum-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+  }
+
+  .forum-actions:nth-child(odd) {
+    align-self: flex-end;
+    margin-top: -3rem;
+  }
+}
+
+/* media query from 660 */
+@media (max-width: 41.3em) {
+  .section-forum {
+    width: 51rem;
+  }
+}
+
+/* media query from 490 */
+@media (max-width: 31em) {
+  .section-forum {
+    width: 41rem;
+  }
+}
+
+/* media query from 380 */
+@media (max-width: 24.4em) {
+  .section-forum {
+    width: 28rem;
+  }
+}
