--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,20 @@ body {
   }
 }
 
+/* media query from 780 */
+@media (max-width: 48.8em) {
+  .ck.ck-reset {
+    width: 57rem !important;
+  }
+}
+
+/* media query from 780 */
+@media (max-width: 41.3em) {
+  .ck.ck-reset {
+    width: 47rem !important;
+  }
+}
+
 /* media query from 540 */
 @media (max-width: 33.8em) {
   .content {
@@ -193,6 +207,17 @@ body {
   .paragraph-primary {
     font-size: 1.2rem;
   }
+
+  .ck.ck-reset {
+    width: 37.5rem !important;
+  }
+}
+
+/* media query from 430 */
+@media (max-width: 26.9em) {
+  .ck.ck-reset {
+    width: 36rem !important;
+  }
 }
 
 /* media query from 380 */
@@ -203,5 +228,16 @@ body {
 
   .paragraph-primary {
     font-size: 1.1rem;
+  }
+
+  .ck.ck-reset {
+    width: 34rem !important;
+  }
+}
+
+/* media query from 360 */
+@media (max-width: 22.5em) {
+  .ck.ck-reset {
+    width: 30rem !important;
   }
 }
