--- a/src/components/forum/forumUnreadContent.module.css
+++ b/src/components/forum/forumUnreadContent.module.css
@@ -30,6 +30,11 @@
   align-self: center;
 }
 
+.forum-topic-replies-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .reply-button {
   align-self: flex-end;
   cursor: pointer;
@@ -48,4 +53,134 @@
   box-shadow: 0 10px 20px -10px rgba(131, 131, 132, 0.6);
   transform: translateY(-5px);
   background: #fff;
+}
+
+/* media query from 1280 */
+@media (max-width: 80em) {
+  .section-unread-content {
+    width: 125rem;
+  }
+  .forum-topic-replies-container {
+    width: 125rem;
+  }
+}
+
+/* media query from 1270 */
+@media (max-width: 79em) {
+  .section-unread-content {
+    width: 120rem;
+  }
+  .forum-topic-replies-container {
+    width: 120rem;
+  }
+}
+
+/* media query from 1200 */
+@media (max-width: 75em) {
+  .section-unread-content {
+    width: 105rem;
+  }
+  .forum-topic-replies-container {
+    width: 105rem;
+  }
+}
+
+/* media query from 1145 */
+@media (max-width: 71.6em) {
+  .section-unread-content {
+    width: 96rem;
+  }
+  .forum-topic-replies-container {
+    width: 96rem;
+  }
+}
+
+/* media query from 995 */
+@media (max-width: 62.2em) {
+  .section-unread-content {
+    width: 85rem;
+  }
+  .forum-topic-replies-container {
+    width: 85rem;
+  }
+}
+
+/* media query from 890 */
+@media (max-width: 55.7em) {
+  .section-unread-content {
+    width: 74rem;
+  }
+  .forum-topic-replies-container {
+    width: 74rem;
+  }
+}
+
+/* media query from 780 */
+@media (max-width: 48.8em) {
+  .section-unread-content {
+    width: 64rem;
+  }
+  .forum-topic-replies-container {
+    width: 64rem;
+  }
+}
+
+/* media query from 660 */
+@media (max-width: 41.3em) {
+  .section-unread-content {
+    width: 51rem;
+  }
+  .forum-topic-replies-container {
+    width: 51rem;
+  }
+}
+
+/* media query from 490 */
+@media (max-width: 31em) {
+  .section-unread-content {
+    width: 39rem;
+  }
+  .forum-topic-replies-container {
+    width: 39rem;
+  }
+}
+
+/* media query from 430 */
+@media (max-width: 25em) {
+  .section-unread-content {
+    width: 37rem;
+  }
+  .forum-topic-replies-container {
+    width: 37rem;
+  }
+}
+
+/* media query from 412 */
+@media (max-width: 25.75em) {
+  .section-unread-content {
+    width: 39rem;
+  }
+  .forum-topic-replies-container {
+    width: 39rem;
+  }
+}
+
+/* media query from 380 */
+@media (max-width: 24.4em) {
+  .section-unread-content {
+    width: 37rem;
+  }
+  .forum-topic-replies-container {
+    width: 37rem;
+  }
+}
+
+/* media query from 360 */
+@media (max-width: 22.5em) {
+  .section-unread-content {
+    width: 33rem;
+  }
+  .forum-topic-replies-container {
+    width: 34rem;
+  }
 }
