updated News CSS files

--- a/src/index.css
+++ b/src/index.css
@@ -191,7 +191,7 @@ body {
 /* media query from 540 */
 @media (max-width: 33.8em) {
   .content {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 
