--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -127,14 +127,18 @@
 /* media query from 490 */
 @media (max-width: 31em) {
   .news-container {
-    width: 41rem;
+    width: 51rem;
+    padding-left: 1.2rem;
+    padding-right: 3.2rem;
   }
   .news-content-img-box {
-    width: 35rem;
+    /* width: 35rem; */
+    width: 20rem;
   }
   .news-content-text-box {
     width: 100%;
-    height: 21rem;
+    height: inherit;
+    /* height: 21rem; */
   }
 }
 
