--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -145,9 +145,11 @@
 /* media query from 380 */
 @media (max-width: 24.4em) {
   .news-container {
-    width: 34rem;
+    width: 100%;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
   }
   .news-content-img-box {
-    width: 28rem;
+    width: 20rem;
   }
 }
