--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -47,10 +47,10 @@
 /* media query from 1200 */
 @media (max-width: 76em) {
   .news-container {
-    width: 105rem;
+    width: 100rem;
   }
   .news-content-img-box {
-    width: 32rem;
+    width: 30rem;
   }
 }
 
@@ -93,7 +93,7 @@
 /* media query from 780 */
 @media (max-width: 48.8em) {
   .news-container {
-    width: 70rem;
+    width: 77rem;
   }
   .news-content-img-box {
     width: 30rem;
@@ -113,23 +113,25 @@
 /* media query from 540 */
 @media (max-width: 33.8em) {
   .news-container {
-    width: 51rem;
+    width: 63.5rem;
+    padding: 0 1.2rem;
+    width: 0 2.2rem;
   }
   .news-content-img-box {
-    width: 45rem;
+    width: 25rem;
   }
   .news-content-text-box {
     width: 100%;
-    height: 21rem;
+    height: inherit;
   }
 }
 
 /* media query from 490 */
 @media (max-width: 31em) {
   .news-container {
-    width: 51rem;
+    width: 49rem;
     padding-left: 1.2rem;
-    padding-right: 3.2rem;
+    padding-right: 1.2rem;
   }
   .news-content-img-box {
     /* width: 35rem; */
