updated News CSS files

--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -72,7 +72,7 @@
     width: 89rem;
   }
   .news-content-img-box {
-    width: 43rem;
+    width: 35rem;
   }
   .news-content-text-box {
     width: 100%;
@@ -115,7 +115,7 @@
   .news-container {
     width: 63.5rem;
     padding: 0 1.2rem;
-    width: 0 2.2rem;
+    margin: 0 2.2rem;
   }
   .news-content-img-box {
     width: 25rem;
@@ -132,14 +132,22 @@
     width: 49rem;
     padding-left: 1.2rem;
     padding-right: 1.2rem;
+    margin: 0rem;
   }
+
+  .news_logo_sm_container {
+    top: 6rem;
+    margin-top: 6rem;
+  }
+
   .news-content-img-box {
-    /* width: 35rem; */
     width: 20rem;
+    height: 15rem;
   }
   .news-content-text-box {
     width: 100%;
     height: inherit;
+    padding: 10px;
     /* height: 21rem; */
   }
 }
@@ -150,8 +158,21 @@
     width: 100%;
     padding-left: 1.2rem;
     padding-right: 1.2rem;
+    margin: 0rem;
   }
+
+  .news_logo_sm_container {
+    top: 6rem;
+    margin-top: 6rem;
+  }
+
   .news-content-img-box {
     width: 20rem;
+    height: 15rem;
+  }
+
+  .news-content-text-box {
+    height: inherit;
+    padding: 10px;
   }
 }
