--- a/src/components/Virtuals.module.css
+++ b/src/components/Virtuals.module.css
@@ -48,7 +48,7 @@
 /* media query from 1200 */
 @media (max-width: 76em) {
   .virtual-container {
-    width: 105rem;
+    width: 100rem;
   }
   .virtual-content-img-box {
     width: 32rem;
@@ -94,7 +94,7 @@
 /* media query from 780 */
 @media (max-width: 48.8em) {
   .virtual-container {
-    width: 70rem;
+    width: 77rem;
   }
   .virtual-content-img-box {
     width: 30rem;
@@ -114,37 +114,61 @@
 /* media query from 540 */
 @media (max-width: 33.8em) {
   .virtual-container {
-    width: 51rem;
+    width: 63.5rem;
+    padding: 0 1.2rem;
+    margin: 0 2.2rem;
   }
   .virtual-content-img-box {
-    width: 45rem;
+    width: 25rem;
   }
   .virtual-content-text-box {
     width: 100%;
-    height: 21rem;
+    height: inherit;
   }
 }
 
 /* media query from 490 */
 @media (max-width: 31em) {
   .virtual-container {
-    width: 41rem;
+    width: 49rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    margin: 0rem;
+  }
+  .virtual_logo_sm_container {
+    top: 6rem;
+    margin-top: 6rem;
   }
   .virtual-content-img-box {
-    width: 35rem;
+    width: 20rem;
+    height: 15rem;
   }
   .virtual-content-text-box {
     width: 100%;
-    height: 25rem;
+    height: inherit;
+    padding: 10px;
   }
 }
 
 /* media query from 380 */
 @media (max-width: 24.4em) {
   .virtual-container {
-    width: 34rem;
+    width: 100%;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    margin: 0rem;
+  }
+
+  .virtual_logo_sm_container {
+    top: 6rem;
+    margin-top: 6rem;
   }
   .virtual-content-img-box {
-    width: 28rem;
+    width: 20rem;
+    height: 15rem;
+  }
+  .virtual-content-text-box {
+    height: inherit;
+    padding: 10px;
   }
 }
