--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 .container {
   width: 130rem;
   padding: 0 3.2rem;
-  margin: 0 auto;
+  margin: 0 1.5rem;
 }
 
 .btn,
@@ -238,6 +238,9 @@ body {
 
 /* media query from 380 */
 @media (max-width: 24.4em) {
+  .container {
+    padding: 0 1.2rem;
+  }
   .heading-secondary {
     font-size: 1.7rem;
   }
